-Got Card Items to work on personas. -Made new Packets -Updated some server to client information -Added sp to skills